projects/los-retail/user/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user
  name: user
  namespace: los-retail-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - image: registry.coherent.in/user-management-los-new:1
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: user
          # startupProbe:
          #   httpGet:
          #     path: /actuator/health
          #     port: 7015
          #   failureThreshold: 30
          #   periodSeconds: 10
      imagePullSecrets:
        - name: registry-regcred
