projects/los-retail/user/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user
  name: user-svc
  namespace: los-retail-dev
spec:
  ports:
    - port: 6015
      protocol: TCP
      targetPort: 6015
  selector:
    app: user
